--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
 Theme Name: lightpress
 Theme URI: http://phantomthemes.com/downloads/lightpress-wordpress-theme/
-Author: phantomthemes
-Author URI: http://phantomthemes.com
+Author: PhantomThemes
+Author URI: https://phantomthemes.com
 Description: LightPress is the Light WordPress Theme, Specially Designed for the Blog, LightPress is minimalist WordPress theme Best for SEO and Speed of Loading Time view detail http://phantomthemes.com/downloads/lightpress-wordpress-theme/ and Full Demo http://phantomthemes.com/view?theme=LightPress  
-Version: 1.4
+Version: 1.41
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: lightpress
