--- a/style.css
+++ b/style.css
@@ -508,6 +508,21 @@ html {
  .widget select {
      max-width: 100%;
 }
+.widget-area .widget {
+    width: 100%;
+    padding: 30px;
+  }
+@media(min-width: 767px){
+    .widget-area {
+      overflow: hidden;
+    }
+    
+    .widget-area .widget {
+      width: 18%;
+      padding: 5px;
+      float: left;
+    }
+ }
 /*-------------------------------------------------------------- 
 # Content 
 --------------------------------------------------------------*/
@@ -675,6 +690,10 @@ html {
     height: 5px;
 }
  */
+
+.site{
+	margin-bottom: 15px;
+ }
 .site-header{
     position: fixed;
     background: rgba(255,255,255,0.8);
@@ -746,7 +765,7 @@ html {
 }
  .main-navigation ul>li>a{
     line-height: 55px;
-    padding: 0 30px;
+    padding: 0 15px;
     color: #000;
     font-size: 0.8em;
 }
@@ -792,7 +811,6 @@ html {
  .widget-area .widget{
     font-size: 0.84em;
     float: left;
-    width: 20%;
     padding: 30px;
 }
  .widget-area ul{
@@ -872,7 +890,7 @@ html {
 
 footer .footer-info{
     background: #232429;
-    padding:  30px 0 50px;
+    padding:  30px 0 60px;
     color: #fff;
     font-style: normal;
 }
@@ -943,8 +961,8 @@ footer .footer-info ul li a:hover{
         padding: 0;
     }
      .main-navigation ul>li.current-menu-item>a {
-        box-shadow: none;
-    }
+    box-shadow: 0px 1px 0 #2A4286 !important;
+}
      .main-navigation ul ul{
         padding-left: 15px;
     }
