--- a/style.css
+++ b/style.css
@@ -3,12 +3,12 @@ Theme Name: lightpress
 Theme URI: http://phantomthemes.com/items/lightpress-wordpress-theme/
 Author: PhantomThemes
 Author URI: https://phantomthemes.com
-Description: LightPress is the Light WordPress Theme, Specially Designed for the Blog, LightPress is minimalist WordPress theme Best for SEO and Speed of Loading Time view detail http://phantomthemes.com/items/lightpress-wordpress-theme/ and Full Demo http://phantomthemes.com/view?theme=LightPress  
-Version: 2.0.5
+Description: LightPress is fast loading responsive, modern & creative WordPress theme, specially designed for the Personal, Corporate and Photography Blogging Website. Theme is beautifully handcrafted with minimalist design approach and based on Twitter Bootstrap 4  and Underscore S Framework. High quality clean code with Search Engine Optimized (SEO) and can be used as blog for businesses related to travel, fitness, yoga, gym, education, arts, sports and news etc. It supports easy installation and setup with One Click Demo Builder Plugin. To view detail and demo http://phantomthemes.com/items/lightpress-wordpress-theme/ and  http://phantomthemes.com/view?theme=LightPress
+Version: 2.0.6
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: lightpress
-Tags:blog, footer-widgets, one-column, featured-images, custom-background, custom-colors
+Tags:blog, footer-widgets, one-column, featured-images, custom-background, custom-colors, custom-menu, editor-style, theme-options, threaded-comments, blog, news, photography		
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
