Fallback menu spport added

--- a/style.css
+++ b/style.css
@@ -4,11 +4,11 @@ Theme URI: http://phantomthemes.com/items/lightpress-wordpress-theme/
 Author: PhantomThemes
 Author URI: https://phantomthemes.com
 Description: LightPress is fast loading responsive, modern & creative WordPress theme, specially designed for the Personal, Corporate and Photography Blogging Website. Theme is beautifully handcrafted with minimalist design approach and based on Twitter Bootstrap 4  and Underscore S Framework. High quality clean code with Search Engine Optimized (SEO) and can be used as blog for businesses related to travel, fitness, yoga, gym, education, arts, sports and news etc. It supports easy installation and setup with One Click Demo Builder Plugin. To view detail and demo http://phantomthemes.com/items/lightpress-wordpress-theme/ and  http://phantomthemes.com/view?theme=LightPress
-Version: 2.0.6
+Version: 2.0.7
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: lightpress
-Tags:blog, footer-widgets, one-column, featured-images, custom-background, custom-colors, custom-menu, editor-style, theme-options, threaded-comments, blog, news, photography		
+Tags: footer-widgets, one-column, featured-images, custom-background, custom-colors, custom-menu, editor-style, theme-options, threaded-comments, blog, news, photography		
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
